[project]
name = "neo-andean-mcp"
version = "1.0.0"
description = "Neo-Andean aesthetic enhancement MCP server covering architecture (cholet) and fashion (cholita) domains"
requires-python = ">=3.10"
dependencies = ["numpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
neo-andean-mcp = "neo_andean_mcp:mcp"
